Added product test

--- a/AutomationProject2024/TestData/Resources.resx
+++ b/AutomationProject2024/TestData/Resources.resx
@@ -123,6 +123,9 @@
   <data name="password" xml:space="preserve">
     <value>MagentoTests2024!</value>
   </data>
+  <data name="watchesPageTitle" xml:space="preserve">
+    <value>Watches</value>
+  </data>
   <data name="welcomeMessage" xml:space="preserve">
     <value>Welcome</value>
   </data>
