--- a/AutomationProject2024/TestData/Resources.resx
+++ b/AutomationProject2024/TestData/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="email" xml:space="preserve">
-    <value>testUser@yahoo.com</value>
+    <value>test.user@yahoo.com</value>
   </data>
   <data name="password" xml:space="preserve">
     <value>MagentoTests2024!</value>
